#558: First PMD fixes applied